objects/User_Region_Segment_Group_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>BU_Segment__c</fullName>
        <label>BU Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bu_Region__c</fullName>
        <label>Bu Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <label>Public Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Region Segment Group Mapping</label>
    <pluralLabel>User Region Segment Group Mappings</pluralLabel>
</CustomObject>